--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+><!doctype html>
 <!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
 <!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
@@ -39,6 +39,7 @@
 <p>My name is M. Nur Hasanuddin. I'm from Informatics Engineering Lampung University 2016.</p>
 
 <p>my project euler username is "Art3ar"
+  
 <a href="https://postimg.org/image/51mgbtf9n/"><img src="https://s17.postimg.org/kacdpl8y7/art3ar.png" alt="art3ar.png"></a></p>
         </article>
       </div>
@@ -50,7 +51,7 @@
 
       </div>
       <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a> <a> This is my first web btw :D im still learning </a></small>
       </div>
     </footer>
   </div>
