--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       </div>
       <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a> <a> This is my first web btw :D im still learning </a></small>
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a> <br> This is my first web btw :D im still learning </small>
       </div>
     </footer>
   </div>
