--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
         <article class="markdown-body">
           <p><strong>Hello</strong>, this is my first web. I'm still learning on web development :D</p>
 
-<p>My name is M. Nur Hasanuddin. I'm from Informatics Engineering Lampung University 2016.</p>
+          <p>My name is M. Nur Hasanuddin. I'm from Informatics Engineering Lampung University 2016.</p>
 
-<p>my project euler username is "Art3ar"
-  
-<a href="https://postimg.org/image/51mgbtf9n/"><img src="https://s17.postimg.org/kacdpl8y7/art3ar.png" alt="art3ar.png"></a></p>
+          <p>my project euler username is "Art3ar"</p>
+          <p><a href="https://postimg.org/image/51mgbtf9n/"><img src="https://s17.postimg.org/kacdpl8y7/art3ar.png" alt="art3ar.png"></a></p>
         </article>
       </div>
     </div>
