Revert "smoothing tampilan, semoga memuaskan"

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+><!doctype html>
 <!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
 <!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
@@ -8,8 +8,6 @@
 
   <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
   <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="stylesheets/style.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
@@ -21,6 +19,7 @@
 </head>
 
 <body>
+
   <div class="wrapper">
     <header>
       <h1 class="title">Art3ar Web</h1>
@@ -29,84 +28,25 @@
       <p class="tagline">My First Web</p>
       <div id="main" role="main">
         <div class="download-bar">
-          <div class="inner">
-            <a href="https://github.com/art3ar"><i class="fa fa-github fa-lg"></i>&nbsp; Visit my Github</a>
-          </div>
-          <span class="blc"></span><span class="trc"></span>
+        <div class="inner">
+          <a href="https://github.com/art3ar" class="code">View Art3ar Web on GitHub</a>
         </div>
-        <article id="main-body" class="markdown-body" hidden>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <p><strong>Hello</strong>, this is my first web. I'm still learning on web development :D</p>
 
-          <p class="kutipan">
-            <small>
-              <i>
-                Quote...
-              </i>
-            </small><br/>
-            <strong>Hello</strong>, this is my first web. I'm still learning on web development :D
-          </p>
+          <p>My name is M. Nur Hasanuddin. I'm from Informatics Engineering Lampung University 2016.</p>
 
-          <table class="x-table">
-            <tbody class="x-tbody">
-              <tr class="x-tr">
-                <td class="x-td x-right">
-                  <i class="fa fa-user fa-lg"></i> 
-                </td>
-                <td class="x-td">
-                  <small class="x-small">Name</small><br/>
-                  M. Nur Hasanuddin
-                </td>
-              </tr>
-              <tr class="x-tr">
-                <td class="x-td x-right">
-                  <i class="fa fa-graduation-cap fa-lg"></i> 
-                </td>
-                <td class="x-td">
-                  <small class="x-small">Major</small><br/>
-                  Informatics Engineering 2016
-                </td>
-              </tr>
-              <tr class="x-tr">
-                <td class="x-td x-right">
-                  <i class="fa fa-university fa-lg"></i> 
-                </td>
-                <td class="x-td">
-                  <small class="x-small">University</small><br/>
-                  Lampung University
-                </td>
-              </tr>
-              <tr class="x-tr">
-                <td class="x-td x-right">
-                  <i class="fa fa-arrow-circle-right fa-lg"></i> 
-                </td>
-                <td class="x-td">
-                  <small class="x-small">Project Euler Username</small><br/>
-                  Art3ar<br/>
-                </td>
-              </tr>
-              <tr class="x-tr">
-                <td class="x-td x-right">
-                  
-                </td>
-                <td class="x-td">
-                  <br/>
-                  <a href="https://postimg.org/image/51mgbtf9n/"><img src="https://s17.postimg.org/kacdpl8y7/art3ar.png" alt="art3ar.png"></a>
-                </td>
-              </tr>
-              
-            </tbody>
-          </table>
+          <p>my project euler username is "Art3ar"</p>
+          <p><a href="https://postimg.org/image/51mgbtf9n/"><img src="https://s17.postimg.org/kacdpl8y7/art3ar.png" alt="art3ar.png"></a></p>
         </article>
       </div>
     </div>
     <footer>
-      <div class="owner x-footer">
+      <div class="owner">
 
-        <p>
-          <a href="https://github.com/art3ar" class="avatar">
-            <img class="profile-picture" src="https://avatars3.githubusercontent.com/u/22488901?v=3&amp;s=60" width="48" height="48">
-          </a>
-          <a href="https://github.com/art3ar">Visit my Github &nbsp;<i class="fa fa-github fa-lg"></i></a>
-        </p>
+      <p><a href="https://github.com/art3ar" class="avatar"><img src="https://avatars3.githubusercontent.com/u/22488901?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/art3ar">art3ar</a> on <a href="https://www.github.com">GitHub</a></p>
 
       </div>
       <div class="creds">
